export const snapshot = {};

snapshot[`lightningcss plugin 1`] = `4`;

snapshot[`lightningcss plugin 2`] = `
{
  formats: [
    {
      engines: 1,
      ext: ".tmpl.ts",
      pageLoader: [AsyncFunction: module],
    },
    {
      engines: 1,
      ext: ".tmpl.js",
      pageLoader: [AsyncFunction: module],
    },
    {
      engines: undefined,
      ext: ".tmpl.json",
      pageLoader: [AsyncFunction: json],
    },
    {
      dataLoader: [AsyncFunction: json],
      engines: undefined,
      ext: ".json",
    },
    {
      engines: 1,
      ext: ".md",
      pageLoader: [AsyncFunction: text],
    },
    {
      componentLoader: [AsyncFunction: module],
      dataLoader: [AsyncFunction: module],
      engines: 1,
      ext: ".js",
    },
    {
      componentLoader: [AsyncFunction: module],
      dataLoader: [AsyncFunction: module],
      engines: 1,
      ext: ".ts",
    },
    {
      componentLoader: [AsyncFunction: text],
      engines: 1,
      ext: ".njk",
      includesPath: "_includes",
      pageLoader: [AsyncFunction: text],
    },
    {
      dataLoader: [AsyncFunction: yaml],
      engines: undefined,
      ext: ".yaml",
      pageLoader: [AsyncFunction: yaml],
    },
    {
      dataLoader: [AsyncFunction: yaml],
      engines: undefined,
      ext: ".yml",
      pageLoader: [AsyncFunction: yaml],
    },
    {
      asset: true,
      engines: undefined,
      ext: ".css",
      pageLoader: [AsyncFunction: text],
    },
  ],
}
`;

snapshot[`lightningcss plugin 3`] = `
[
]
`;

snapshot[`lightningcss plugin 4`] = `
{
  content: "(removed for testing)",
  data: {
    content: "(removed for testing)",
    page: undefined,
    tags: [
    ],
    url: "/index.css.map",
  },
  dest: {
    ext: ".map",
    path: "/index.css",
  },
  src: {
    path: "",
    remote: undefined,
  },
}
`;

snapshot[`lightningcss plugin 5`] = `
{
  content: "(removed for testing)",
  data: {
    content: "(removed for testing)",
    page: undefined,
    tags: [
    ],
    url: "/text.css.map",
  },
  dest: {
    ext: ".map",
    path: "/text.css",
  },
  src: {
    path: "",
    remote: undefined,
  },
}
`;

snapshot[`lightningcss plugin 6`] = `
{
  content: '@import "variables.css";@import "./text.css";
/*# sourceMappingURL=./index.css.map */',
  data: {
    content: '@import "variables.css";
@import "./text.css";
',
    date: 1970-01-01T00:00:00.000Z,
    page: undefined,
    paginate: [Function: paginate],
    search: Search {},
    tags: [
    ],
    url: "/index.css",
  },
  dest: {
    ext: ".css",
    path: "/index",
  },
  src: {
    ext: ".css",
    path: "/index",
    remote: undefined,
  },
}
`;

snapshot[`lightningcss plugin 7`] = `
{
  content: ".text{font-family:var(--font-family)}.text p{color:var(--color);box-shadow:0 0 .5em var(--background);-webkit-backface-visibility:hidden;backface-visibility:hidden}
/*# sourceMappingURL=./text.css.map */",
  data: {
    content: ".text {
  font-family: var(--font-family);

  & p {
    color: var(--color);
    box-shadow: 0 0 0.5em var(--background);
    backface-visibility: hidden;
  }
}
",
    date: 1970-01-01T00:00:00.000Z,
    page: undefined,
    paginate: [Function: paginate],
    search: Search {},
    tags: [
    ],
    url: "/text.css",
  },
  dest: {
    ext: ".css",
    path: "/text",
  },
  src: {
    ext: ".css",
    path: "/text",
    remote: undefined,
  },
}
`;
